--- a/CrashAnalyseTool/Info.plist
+++ b/CrashAnalyseTool/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016年 com.jsonmess.CrashAnalyseTool. All rights reserved.</string>
+	<string>Copyright © 2016年 jsonmess  All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
